--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./yummy.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!--========== Header ========= -->
